--- a/Front/src/app/main/towns/towns-home/towns-home.component.html
+++ b/Front/src/app/main/towns/towns-home/towns-home.component.html
@@ -1,1 +1,9 @@
-<p>towns-home works!</p>
+<div fxFill fxLayout="column" fxLayoutAlign="start">
+    <o-table attr="townsTable" service="towns" entity="town" keys="id_town" 
+      columns="id_town;town_name;id_province"
+      visible-columns="town_name" query-rows="20"
+      delete-button='no'
+      insert-button='no'
+      refresh-button='no'>
+    </o-table>
+</div>
