--- a/Front/src/app/main/home/home.component.html
+++ b/Front/src/app/main/home/home.component.html
@@ -1,5 +1,3 @@
 <div fxLayout="row" layout-padding fxLayoutAlign="center center">
-  <p>
-    Viajeras
-  </p>
+  <img src="../../../assets/images/foto_home.jpg">
 </div>
