--- a/Front/src/app/main/home/home.component.scss
+++ b/Front/src/app/main/home/home.component.scss
@@ -1,3 +1,17 @@
 .bg {
   background-color: darkred;
 }
+
+img {
+  width: 78%;
+  height: auto;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+h1 {
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+  font-size: 80px;
+}
