--- a/Front/src/app/main/towns/towns-home/towns-home.component.html
+++ b/Front/src/app/main/towns/towns-home/towns-home.component.html
@@ -1,5 +1,5 @@
 <div fxFill fxLayout="column" fxLayoutAlign="start">
-  <o-table attr="townsTable" service="towns" entity="town" keys="id_town" 
+  <o-table attr="destinationTable" service="towns" entity="town" keys="id_town" 
     columns="id_town;town_name;id_province;province_name;id_community;community_name"
     visible-columns="community_name;province_name;town_name" query-rows="20"
     delete-button="no"
@@ -7,13 +7,3 @@
     refresh-button="no">
   </o-table>
 </div>
-
-
-
-<!-- <o-table attr="townsTable" service="towns" entity="town" keys="id_town" 
-      columns="id_town;town_name;id_province"
-      visible-columns="town_name" query-rows="20"
-      delete-button='no'
-      insert-button='no'
-      refresh-button='no'>
-    </o-table> -->
