Creacion formulario perfil (WIP)
Sin conexión con la base de datos para que rellene el formulario con la información del usuario activo.

--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -1,1 +1,16 @@
-<p>travelers-home works!</p>
+<o-form #form attr="profile_detail" service="users" entity="user" fxLayout="column" show-header="yes"
+    header-actions="R;U" keys="user_" keys-sql-types="VARCHAR" show-header-navigation="yes" (onDataLoaded)="formInit()">
+    <o-text-input attr="name" label="NAME"></o-text-input>
+    <!-- <o-text-input attr="surname" label="SURNAME"></o-text-input>
+    <o-text-input attr="email" label="EMAIL"></o-text-input>
+    <o-text-input attr="phonenumber" label="PHONENUMBER"></o-text-input>
+    <o-text-input attr="description" label="DESCRIPTION"></o-text-input>
+    <o-password-input attr="password" label="PASSWORD" required="yes"
+        (onChange)="reviewMatches($event)"></o-password-input>
+    <o-password-input attr="passwordconfirm" label="PASSWORDCONFIRM" [validators]="validatorArray">
+        <o-validator error-name="mustMatch" error-text="VALIDATOR_MUST_MATCH"></o-validator>
+    </o-password-input>
+    <o-slide-toggle attr="host" label="HOST" (onChange)="toggleHost($event)"></o-slide-toggle>
+    <o-text-input attr="nif" label="NIF" *ngIf="hostActive"></o-text-input>
+    <o-combo attr="town" label="TOWN" *ngIf="hostActive"></o-combo> -->
+</o-form>
