--- a/Front/src/assets/css/custom-theme.scss
+++ b/Front/src/assets/css/custom-theme.scss
@@ -44,9 +44,9 @@ $mat-custom-accent: (
   400: #534285, 
   500: #35216F, 
   600: #301D67, 
-  700: #28185C, 
-  800: #221452, 
-  900: #160B40, 
+  700: #524191, 
+  800: #3b3061, 
+  900: #473581, 
   A100: #8E79FF, 
   A200: #6346FF, 
   A400: #3813FF, 
