--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -1,4 +1,4 @@
-<o-form #form attr="profile_detail" service="users" entity="user" fxLayout="column" show-header="yes"
+<o-form #form attr="profile_detail" service="users" entity="myUser" fxLayout="column" show-header="yes"
     header-actions="R;U" keys="user_" keys-sql-types="VARCHAR" show-header-navigation="yes" (onDataLoaded)="formInit()">
     <o-text-input attr="name" label="NAME"></o-text-input>
     <!-- <o-text-input attr="surname" label="SURNAME"></o-text-input>
