--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -1,17 +1,14 @@
-<o-form #form attr="profile_detail" service="users" entity="myUser" fxLayout="column" show-header="yes"
-    header-actions="R;U" keys="user_" keys-sql-types="VARCHAR" show-header-navigation="yes" (onDataLoaded)="formInit()">
-    <o-text-input attr="name" label="NAME"></o-text-input>
-    <o-text-input attr="surname" label="SURNAME"></o-text-input>
-    <o-text-input attr="email" label="EMAIL"></o-text-input>
-    <o-text-input attr="phonenumber" label="PHONENUMBER"></o-text-input>
-    <o-text-input attr="description" label="DESCRIPTION"></o-text-input>
-    <o-password-input attr="password" label="PASSWORD" required="yes"
-        (onChange)="reviewMatches($event)"></o-password-input>
-    <o-password-input attr="passwordconfirm" label="PASSWORDCONFIRM" [validators]="validatorArray">
-        <o-validator error-name="mustMatch" error-text="VALIDATOR_MUST_MATCH"></o-validator>
-    </o-password-input>
-    <o-slide-toggle attr="host" label="HOST" (onChange)="toggleHost($event)"></o-slide-toggle>
-    <o-text-input attr="nif" label="NIF" ></o-text-input>
-    <!-- <o-text-input attr="town_name" label="TOWN" service="towns" entity="town" keys="id_town"></o-text-input> -->
-    <o-combo attr="id_town" label="TOWN" service="towns" entity="town" value-column="id_town" columns="town_name" visible-columns="town_name"></o-combo>
+<o-form #form attr="profile_detail" service="users" entity="user" fxLayout="column" show-header="yes"
+    header-actions="R;U" keys="user_" keys-sql-types="VARCHAR" show-header-navigation="yes">
+    <o-text-input attr="avatar" label="AVATAR" fxFlex="80" ></o-text-input>
+    <o-text-input attr="name" label="NAME" fxFlex="80" ></o-text-input>
+    <o-text-input attr="surname" label="SURNAME" fxFlex="80" ></o-text-input>
+    <o-text-input attr="email" label="EMAIL" fxFlex="80" ></o-text-input>
+    <o-text-input attr="phonenumber" label="PHONENUMBER" fxFlex="80" ></o-text-input>
+    <o-text-input attr="description" label="DESCRIPTION" fxFlex="80" ></o-text-input>
+    <o-password-input attr="password" label="PASSWORD" required="yes" fxFlex="80" ></o-password-input>
+    <o-slide-toggle attr="host" label="HOST" (onChange)="toggleHost($event)" fxFlex="80" ></o-slide-toggle>
+    <o-text-input attr="nif" label="NIF"  fxFlex="80" ></o-text-input>
+    <o-combo attr="id_town" fxFlex="80" label="TOWN" service="towns" entity="town" keys="id_town" columns="town_name;id_town" visible-columns="town_name"
+        value-column="id_town" class="input-padding"></o-combo>
 </o-form>
