Anfitrionas por ciudad (Sin imagen WIP)
Se muestran las anfitrionas que hay en cada ciudad pero no trae la imagen de la base de datos

--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -27,7 +27,7 @@
                 header-actions="U" #oDetailForm keys="user_" keys-sql-types="VARCHAR" show-header-navigation="yes">
                 <o-column title="PROFILE_DATA" layout-align="start stretch" fxFlex="80">
                     <o-image attr="avatar" label="AVATAR" fxFlex="80" width="350px"
-                        empty-image="assets/images/no-image.png" sql-type="base64"></o-image>
+                        empty-image="assets/images/no-image.png" sql-type="OTHERS"></o-image>
                     <o-text-input attr="name" label="NAME" fxFlex="80" required="yes"></o-text-input>
                     <o-text-input attr="surname" label="SURNAME" fxFlex="80" required="yes"></o-text-input>
                     <o-textarea-input attr="description" label="DESCRIPTION" fxFlex="80"></o-textarea-input>
