--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -30,7 +30,7 @@
                         empty-image="assets/images/no-image.png" sql-type="OTHERS"></o-image>
                     <o-text-input attr="name" label="NAME" fxFlex="80" required="yes"></o-text-input>
                     <o-text-input attr="surname" label="SURNAME" fxFlex="80" required="yes"></o-text-input>
-                    <o-textarea-input attr="description" label="DESCRIPTION" fxFlex="80"></o-textarea-input>
+                    <o-textarea-input attr="short_desc" label="DESCRIPTION" fxFlex="80"></o-textarea-input>
                 </o-column>
                 <o-column title="CONTACT_DATA" layout-align="start stretch" fxFlex="80">
                     <o-text-input attr="email" label="EMAIL" placeholder="example@example.com"
