--- a/Front/src/app/main/main.component.html
+++ b/Front/src/app/main/main.component.html
@@ -1,4 +1,7 @@
-<o-app-layout show-language-selector="yes">
-  <o-user-info-configuration show-profile="yes"></o-user-info-configuration>
+<o-app-layout show-language-selector="yes" opened-sidenav-image="\assets\images\logo_shetravel.png"
+closed-sidenav-image="\assets\images\logo_shetravel.png">
+  <o-user-info-configuration show-profile="yes">
+  </o-user-info-configuration>
   <router-outlet></router-outlet>
 </o-app-layout>
+
