--- a/Front/src/app/main/main.component.html
+++ b/Front/src/app/main/main.component.html
@@ -1,5 +1,5 @@
-<o-app-layout show-language-selector="yes" opened-sidenav-image="\assets\images\logo_shetravel.png"
-closed-sidenav-image="\assets\images\logo_shetravel.png">
+<o-app-layout show-language-selector="yes" opened-sidenav-image="\assets\images\logo_shetravel_p.png"
+closed-sidenav-image="\assets\images\icono_shetravel_p.png">
   <o-user-info-configuration show-profile="yes">
   </o-user-info-configuration>
   <router-outlet></router-outlet>
