--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.css
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.css
@@ -1,14 +1,73 @@
-.image1{
-    width: 500px;
-    height: 500px;
-    object-fit: cover;
-    
+o-grid {
+    margin-top: 20px;
+    }
+
+.image1 {
+    width: 100%;
+    display: block;
+    max-width: none;
+    margin: 0 auto;
+    align-items: center;
 }
 
-.container-item:hover{
+
+.container-item:hover {
    border: 5px solid transparent;
-   /* box-shadow:0 0 10px rgb(0,0,0,0.2); */
-    
-   
-    
+   display: grid;
+   place-items: center;
+}
+
+
+.container-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+.hostCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+
+h1.town-title {
+    text-transform: uppercase;
+    text-align: center;
+    width: 100%;
+    padding: 10px 0;
+    background-color: #efeafa;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+
+
+.name-surname {
+    margin: 2px 0;
+    font-size: 0.7em;
+    text-align: center;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+
+.short_desc {
+    font-size: 0.7em;
+    color: #4b4b4b;
+    width: 98%;
+    text-align: justify;
 }
