Carga datos usuaria en detalle

--- a/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
@@ -1,1 +1,8 @@
-<p>travelers-detail works!</p>
+<o-form service="users" entity="client" keys="id_client" show-header-navigation="no">
+    <o-text-input attr="id_client" sql-type="INTEGER" enabled="no"></o-text-input>
+    <o-text-input attr="name"  enabled="no"></o-text-input>
+    <o-text-input attr="name"  enabled="no"></o-text-input>
+    <o-text-input attr="surname"  enabled="no"></o-text-input>
+    <o-text-input attr="description"  enabled="no"></o-text-input>
+
+  </o-form>
