--- a/Front/src/app/register/register/register.component.html
+++ b/Front/src/app/register/register/register.component.html
@@ -1,6 +1,5 @@
-<p>register works!</p>
-
-<o-form service="users" query-on-init="no" entity="user" keys="user_">
-    
+<o-form service="register" query-on-init="no" entity="register" keys="user_">
+    <o-text-input attr="user_" fxFlex="70" required="yes"></o-text-input>
     <o-text-input attr="password" fxFlex="70" required="yes"></o-text-input>
+    
  </o-form>
