Añadidos name y surname al RegisterService

--- a/Front/src/app/register/register/register.component.html
+++ b/Front/src/app/register/register/register.component.html
@@ -1,4 +1,6 @@
 <o-form service="register" query-on-init="no" entity="register" keys="user_" >
+    <o-text-input attr="name" fxFlex="70" required="yes"></o-text-input>
+    <o-text-input attr="surname" fxFlex="70" required="yes"></o-text-input>
     <o-text-input attr="user_" fxFlex="70" required="yes"></o-text-input>
     <o-text-input attr="password" fxFlex="70" required="yes"></o-text-input>
     
