--- a/Front/src/app/login/login.component.html
+++ b/Front/src/app/login/login.component.html
@@ -8,6 +8,11 @@
       <div fxFill fxLayout="column" fxLayoutAlign="center center" class="login-inner-container">
         <form [formGroup]="loginForm" (ngSubmit)="login()">
 
+          <!-- Logo -->
+        <div class="logo-container">
+          <img src="./assets/images/logo_shetravel_gr.png" alt="Logo">
+        </div>
+
           <div class="login-title-container" fxLayout="column">
             <p class="session-expired text" *ngIf="sessionExpired">{{ 'ERROR_SESSION_EXPIRED' | oTranslate }}</p>
             <span class="title_text">{{ 'LOGIN_TITLE' | oTranslate }}:</span>
@@ -15,9 +20,9 @@
 
           <div fxLayout="column" fxLayoutGap="10px">
             <mat-form-field fxFill class="m-top-24">
-              <input matInput class="mat-input" #user placeholder="{{ 'USERNAME' | oTranslate }}" id="username" [formControl]="userCtrl">
+              <input matInput class="mat-input" #user placeholder="{{ 'EMAIL' | oTranslate }}" id="email" [formControl]="userCtrl">
               <mat-error *ngIf="userCtrl.hasError('required')">
-                {{ 'ERROR_USER_REQUIRED' | oTranslate }}
+                {{ 'ERROR_EMAIL_REQUIRED' | oTranslate }}
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFill class="m-top-24">
@@ -28,27 +33,28 @@
               </mat-error>
             </mat-form-field>
           </div>
-
           <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="10px" class="m-top-24">
             <mat-checkbox class="text">{{ 'REMEMBER_ME' | oTranslate }}</mat-checkbox>
           </div>
 
          
-          
-          <button mat-raised-button color="primary" type="submit">{{ 'LOGIN' | oTranslate }}</button>
+          <div>
+            <button mat-raised-button color="primary" type="submit">{{ 'LOGIN' | oTranslate }}</button>
+          </div>
+          <!-- TEXTO DE EJEMPLO USUARIO/CONTRASEÑA: 
+            <div fxLayout="column" fxLayoutAlign="center center" layout-padding>
+                <span class="login_info">{{ 'EXAMPLE_LOGIN_INFO' | oTranslate }}:</span>
+                <span class="dark_text">{{ 'USERNAME' | oTranslate }} : demo</span>
+                <span class="dark_text">{{ 'PASSWORD' | oTranslate }} : demouser</span>
+              </div> -->
+          <p></p>
 
+            <div class="register-section" fxLayout="column" fxLayoutAlign="center center">
+              <span class="register-prompt">{{ 'Are you not registered yet?' }}</span>
+              <button mat-raised-button color="primary" (click)="registerButtonFn()">{{ 'REGISTER NOW' }}</button>
+            </div>
 
-        
-          
-
-          <!-- TEXTO DE EJEMPLO USUARIO/CONTRASEÑA: -->
-          <!-- <div fxLayout="column" fxLayoutAlign="center center" layout-padding>
-            <span class="login_info">{{ 'EXAMPLE_LOGIN_INFO' | oTranslate }}:</span>
-            <span class="dark_text">{{ 'USERNAME' | oTranslate }} : demo</span>
-            <span class="dark_text">{{ 'PASSWORD' | oTranslate }} : demouser</span>
-          </div> -->
-        </form>
-        <button mat-raised-button color="primary" (click)="registerButtonFn()">{{ 'REGISTER' | oTranslate }}</button>
+          </form>
 
       </div>
 
