--- a/Front/src/app/login/login.component.scss
+++ b/Front/src/app/login/login.component.scss
@@ -1,5 +1,5 @@
 .m-top-24 {
-  margin-top: 24px;
+  margin-top: 15px;
 }
 
 .full-page {
@@ -58,14 +58,15 @@
         }
 
         .logo-container {
-          width: 368px;
-          height: 110px;
-
-          img {
-            max-height: 110px;
-            max-width: 368px;
-          }
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          margin-bottom: 20px;
+      
         }
+
+       }
 
         .session-expired {
           text-align: center;
@@ -77,8 +78,8 @@
 
         button {
           width: 100%;
-          margin: 32px 0 0;
-          height: 42px;
+          margin: 24px 0;
+          height: 40px; /* Aumenta el tamaño de los botones */
           font-size: 16px;
         }
 
@@ -113,10 +114,14 @@
     width: 100%;
     height: 40px;
     z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 
     div {
       height: 40px;
-      margin-right: 138px;
+      margin-right: 0px;
 
       span {
         font-size: 11px;
@@ -126,7 +131,7 @@
 
   }
 
-}
+
 @media(max-width:576px) {
   .full-page {
     .login-outer-container {
@@ -153,3 +158,4 @@
     }
   }
 }
+
