--- a/Front/src/app/login/login.component.html
+++ b/Front/src/app/login/login.component.html
@@ -33,9 +33,9 @@
               </mat-error>
             </mat-form-field>
           </div>
-          <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="10px" class="m-top-24">
+          <!-- <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="10px" class="m-top-24">
             <mat-checkbox class="text">{{ 'REMEMBER_ME' | oTranslate }}</mat-checkbox>
-          </div>
+          </div> -->
 
          
           <div>
