Arreglado filtro y settings

--- a/Front/src/app/login/login.component.html
+++ b/Front/src/app/login/login.component.html
@@ -50,8 +50,8 @@
           <p></p>
 
             <div class="register-section" fxLayout="column" fxLayoutAlign="center center">
-              <span class="register-prompt">{{ 'Are you not registered yet?' }}</span>
-              <button mat-raised-button color="primary" (click)="registerButtonFn()">{{ 'REGISTER NOW' }}</button>
+              <span class="register-prompt">{{ 'Are you not registered yet?' | oTranslate }}</span>
+              <button mat-raised-button color="primary" (click)="registerButtonFn()">{{ 'REGISTER NOW' | oTranslate }}</button>
             </div>
 
           </form>
