Estilos y límite caracteres
Box de contenidos en register
Box de contenidos para trevelers-detail
Límite de caracteres en register y perfil
Logo flotante y fondo hq en home
Icono en footer
Estilos botones en custom-theme

--- a/Front/src/app/main/main.component.html
+++ b/Front/src/app/main/main.component.html
@@ -1,5 +1,5 @@
-<o-app-layout show-language-selector="yes" opened-sidenav-image="\assets\images\logo_shetravel_p.png"
-closed-sidenav-image="\assets\images\icono_shetravel_p.png">
+<o-app-layout show-language-selector="yes" opened-sidenav-image="\assets\images\logoNav.png"
+closed-sidenav-image="\assets\icons\iconNav.png">
   <o-user-info-configuration show-profile="yes" show-settings="no">
   </o-user-info-configuration>
   <router-outlet></router-outlet>
