--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.html
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.html
@@ -1,16 +1,22 @@
 <o-form fxFill service="towns" entity="town" keys="id_town" show-header="no">
     <o-text-input attr="id_town" sql-type="INTEGER" enabled="no" oHidden></o-text-input>
-    <o-text-input #townnamefield attr="town_name" enabled="no" (onValueChange)="reloadValues($event)" oHidden></o-text-input>
+    <o-text-input #townnamefield attr="town_name" enabled="no" (onValueChange)="reloadValues($event)"
+        oHidden></o-text-input>
 
-    <h1 class="town-title">{{ custom_name }}</h1> 
+    <h1 class="town-title">{{ custom_name }}</h1>
+    <o-grid #grid columns="user_;id_client;name;surname;short_desc;avatar" quick-filter-columns="name;surname"
+        service="users" entity="host" keys="id" parent-keys="id_town" [cols]="3" show-page-size="false"
+        page-size-options="4;8;16" grid-item-height="3:4" refresh-button="false" pagination-controls="false"
+        gutter-size="20px" [ngStyle]="{'height':'600px'}" (onClick)="goToHostDetail($event)">
 
-    <o-grid #grid columns="user_;id_client;name;surname;short_desc;avatar" quick-filter-columns="name;surname" service="users" entity="host" keys="id" parent-keys="id_town"
-        [cols]="3" show-page-size="false" page-size-options="4;8;16" grid-item-height="3:4"
-        refresh-button="false" pagination-controls="false" gutter-size="20px" [ngStyle]="{'height':'600px'}" (onClick)="goToHostDetail($event)">
-
-        <o-grid-item class="hostCard" *ngFor="let list of grid.dataArray" >
+        <div class="container">
+        <o-grid-item class="hostCard" *ngFor="let list of grid.dataArray">
             <o-column class="container-item">
-                <o-image class ="image1" attr="image1" data="{{ list.avatar }}" read-only="true" show-controls="false"></o-image>               
+                <div>
+                    <o-image class="image1" attr="image1" data="{{ list.avatar }}" read-only="true"
+                        show-controls="false">
+                    </o-image>
+                </div>
                 <div class="name-surname">
                     <h2>{{ list.name + ' ' + list.surname }}</h2>
                 </div>
@@ -19,10 +25,9 @@
                 </div>
             </o-column>
         </o-grid-item>
+    </div>
     </o-grid>
-
 </o-form>
-
 
 <!-- <o-list #list attr="list" columns="name;surname;short_desc;avatar" quick-filter-columns="name;short_desc"
 service="users" entity="host" keys="id" parent-keys="id_town" refresh-button="false">
