--- a/Front/src/app/login/login.component.html
+++ b/Front/src/app/login/login.component.html
@@ -10,7 +10,7 @@
 
           <!-- Logo -->
         <div class="logo-container">
-          <img src="./assets/images/logo_shetravel_gr.png" alt="Logo">
+          <img src="../../assets/images/logo300.png" alt="Logo" width="280px">
         </div>
 
           <div class="login-title-container" fxLayout="column">
@@ -64,6 +64,9 @@
   <div id="footer" class="footer-container">
     <div fxLayout="row" fxLayoutAlign="end center">
       <span>{{ 'FOOTER_CREATED_BY' | oTranslate }}</span>
+      <span>
+        <img src="../../assets/icons/iconFooter.png" alt="icon" width="18px">
+      </span>
       <span> &copy; 2023 </span>
       <span>{{ 'FOOTER_RIGHTS' | oTranslate }}</span>
     </div>
