--- a/Front/src/app/main/home/home.component.html
+++ b/Front/src/app/main/home/home.component.html
@@ -1,3 +1,5 @@
-<div fxLayout="row" layout-padding fxLayoutAlign="center center">
-  <img src="../../../assets/images/foto_home.jpg">
+<div class="container">
+  <img class="background" src="../../../assets/images/foto_home.jpg">
+  <img class="logo" src="../../../assets/images/logo300.png" alt="logo">
+
 </div>
