CSS Town Detail y email input en register y traveler

--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.css
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.css
@@ -72,4 +72,8 @@ o-grid {
     color: #4b4b4b;
     width: 98%;
     text-align: justify;
+    height: 70px; /* altura fija para la descripción */
+    overflow: hidden; 
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
 }
