--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -33,8 +33,8 @@
                     <o-textarea-input attr="short_desc" label="DESCRIPTION" fxFlex="80" max-length="250"></o-textarea-input>
                 </o-column>
                 <o-column title="CONTACT_DATA" layout-align="start stretch" fxFlex="80">
-                    <o-text-input attr="email" label="EMAIL" placeholder="example@example.com"
-                        fxFlex="80"></o-text-input>
+                    <o-email-input attr="email" label="EMAIL" placeholder="example@example.com"
+                        fxFlex="80"></o-email-input>
                     <o-text-input attr="phonenumber" label="PHONENUMBER" fxFlex="80" max-length="15"></o-text-input>
                 </o-column>
                 <o-column title="REGISTER_DATA" layout-align="start stretch" fxFlex="80">
@@ -73,8 +73,8 @@
                         columns="town_name;id_town" visible-columns="town_name" value-column="id_town"
                         class="input-padding" fxFlex="80" required="yes"></o-combo>
                     <o-text-input attr="phonenumber" label="PHONENUMBER" fxFlex="80" required="yes" max-length="15"></o-text-input>
-                    <o-text-input attr="email" label="EMAIL" placeholder="example@example.com" fxFlex="80"
-                        required="yes"></o-text-input>
+                    <o-email-input attr="email" label="EMAIL" placeholder="example@example.com" fxFlex="80"
+                        required="yes"></o-email-input>
                     <o-text-input attr="nif" label="NIF" required="yes" fxFlex="80" required="yes" max-length="25"></o-text-input>
                 </o-column>
                 <o-column title="HOST_AVAILABLE" layout-align="start stretch" fxFlex="80">
