Placeholder email registro

--- a/Front/src/app/register/register/register.component.html
+++ b/Front/src/app/register/register/register.component.html
@@ -59,7 +59,7 @@
             ¡Introduce un email válido!
           </mat-error>
         </mat-form-field> -->
-        <o-email-input attr="user_" label="{{ 'Register email' | oTranslate }}" fxFlex="100" required="yes" ></o-email-input>
+        <o-email-input attr="user_" label="{{ 'Register email' | oTranslate }}" placeholder="example@example.com" fxFlex="100" required="yes" ></o-email-input>
 
 
         <o-password-input attr="password" label="PASSWORD" fxFlex="100" required="yes" label="PASSWORD"
